applications/authentication-service/kustomize/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: authentication-service
    labels:
        app: authentication-service
        version: v1
        service: authentication-service
spec:
    replicas: 1
    selector:
        matchLabels:
            app: authentication-service
            version: v1
            service: authentication-service
    template:
        metadata:
            labels:
                app: authentication-service
                version: v1
                service: authentication-service
                sidecar.istio.io/inject: "true"
        spec:
            serviceAccountName: authentication-service
            containers:
                -   name: authentication-service
                    livenessProbe:
                        httpGet:
                            port: 8080
                            path: /health
                        initialDelaySeconds: 5
                        periodSeconds: 30
                    image: service:latest
                    imagePullPolicy: Always
                    ports:
                        -   containerPort: 8080
