applications/authentication-service/kustomize/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
    name: authentication-service # authentication-service.<namespace>.svc.cluster.local
    labels:
        app: authentication-service
        service: authentication-service
spec:
    selector:
        app: authentication-service
    ports:
        -   port: 8080
            targetPort: 8080
            name: http
